<?xml version="1.0"?>
<package format="2">
  <name>pviz</name>
  <version>0.1.0</version>
  <description>The PR2 Visualization Library</description>

  <maintainer email="bcohen@seas.upenn.edu">Benjamin Cohen</maintainer>
  <license>BSD</license>
  <url type="website">http://www.ros.org/wiki/pviz</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>kdl</depend>
  <depend>kdl_parser</depend>
  <depend>roscpp</depend>
  <depend>tf</depend>
  <depend>visualization_msgs</depend>

  <export>
  </export>
</package>
